--- a/TMSAsus/web/WEB-INF/web.xml
+++ b/TMSAsus/web/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <servlet-name>loginVerify</servlet-name>
         <servlet-class>System.loginVerify</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>applyCourse</servlet-name>
+        <servlet-class>System.applyCourse</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>testDBConnect</servlet-name>
         <url-pattern>/testDBConnect</url-pattern>
@@ -15,6 +19,10 @@
     <servlet-mapping>
         <servlet-name>loginVerify</servlet-name>
         <url-pattern>/loginVerify</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>applyCourse</servlet-name>
+        <url-pattern>/applyCourse</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
