--- a/TMSAsus/web/WEB-INF/web.xml
+++ b/TMSAsus/web/WEB-INF/web.xml
@@ -29,4 +29,8 @@
             30
         </session-timeout>
     </session-config>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error-page.jsp</location>
+    </error-page>
 </web-app>
